--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web_dev_portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-
-    <head>
-
-    </head>
+    <header>
+        <nav>
+            <h3 class="mary">Ma<span class="primary_color">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""> <button class="btn_primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
 
