--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header>
+    <header class="header">
         <nav>
             <h3 class="mary">Ma<span class="primary_color">r</span>y</h3>
             <ul>
@@ -23,6 +23,28 @@
                 <li><a href=""> <button class="btn_primary">Hire Me</button></a></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div class="banner_content">
+                <h3 class="banner_greet">Hi, I  am</h3>
+                <h1 class="banner_title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn_primary">Download CV</button>
+                <button class="btn_primary">Contact</button>
+            </div>
+
+            <img class="profile_pic" src="images/hardy.png" alt="">
+
+
+
+
+
+
+ 
+        </div>
+
+
+
     </header>
 
     <main>
