--- a/index.html
+++ b/index.html
@@ -23,31 +23,57 @@
                 <li><a href=""> <button class="btn_primary">Hire Me</button></a></li>
             </ul>
         </nav>
-
         <div class="banner">
             <div class="banner_content">
-                <h3 class="banner_greet">Hi, I  am</h3>
+                <h3 class="banner_greet">Hi, I am</h3>
                 <h1 class="banner_title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
                 <button class="btn_primary">Download CV</button>
                 <button class="btn_primary">Contact</button>
             </div>
-
             <img class="profile_pic" src="images/hardy.png" alt="">
-
-
-
-
-
-
- 
         </div>
-
-
-
     </header>
 
     <main>
+
+        <section class="about">
+            <div class="about_me_container">
+                <h3 class="about_me">About Me</h3>
+                <p class="about_para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam aperiam sint
+                    accusantium. Perspiciatis earum minus debitis dolores ducimus expedita ratione dignissimos accusamus
+                    at doloribus, necessitatibus itaque facilis voluptate quod voluptates!Lorem ipsum dolor sit amet
+                    consectetur, adipisicing elit. Repellendus, dolore? Illum
+                    mollitia ut explicabo rerum aliquam cupiditate dolorum! Ad repellendus, corrupti dolore alias
+                    molestiae
+                    quo sapiente soluta quidem consequuntur laudantium.</p>
+
+                <div class="about_info_container">
+
+                    <div class="about_info">
+                        <h4 class="info_title">Name</h4>
+                        <p class="info_description">MAhin</p>
+                    </div>
+                    <div class="about_info">
+                        <h4 class="info_title">Email</h4>
+                        <p class="info_description">mahin@gmail.com</p>
+                    </div>
+                    <div class="about_info">
+                        <h4 class="info_title">Date of birth</h4>
+                        <p class="info_description">30.05.2000</p>
+                    </div>
+                    <div class="about_info">
+                        <h4 class="info_title">From</h4>
+                        <p class="info_description">USA</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
 
     </main>
     <footer>
