--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/324a3a4345.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,10 +30,11 @@
                 <h1 class="banner_title">Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
-                <button class="btn_primary">Download CV</button>
-                <button class="btn_primary">Contact</button>
+                     <a href="https://www.youtube.com/"> <button class="btn_primary"> <i class="fa-solid fa-download"></i> Download CV</button> </a>
+                
+                <button class="btn_primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img class="profile_pic" src="images/hardy.png" alt="">
+            <img class="profile_pic" src="images/hardy.png" alt=""> 
         </div>
     </header>
 
